# goo

./: Make.inc  Make.inc.linux  Make.inc.win32  Makefile  Makefile.in  README.TXT  TERMS  acconfig.h  aclocal.m4  configure.in  release.bash
c/: Make.inc  Makefile  Makefile.in  config.h.in  dlgrt.h  dllentry.c  gc.a.linux  gc.a.sparc  gc.a.win32  gc.h  gc.lib  goo.h  grt.c  grt.h  mini-prt.h  proto.c  unexelf.c
c/g2c/: Makefile  g2c-init.c  goo.c  p2c-init.c
doc/: LISTENER.TXT  Makefile.in  defs.tex  doc.txt  extarticle.cls  goo.tex  hyperlatex.sty  myindex.sty  size9.clo  texdefs.tex
doc/manual/: goomanual.html  goomanual_1.html  goomanual_10.html  goomanual_11.html  goomanual_12.html  goomanual_13.html  goomanual_14.html  goomanual_15.html  goomanual_16.html  goomanual_17.html  goomanual_18.html  goomanual_19.html  goomanual_2.html  goomanual_20.html  goomanual_21.html  goomanual_22.html  goomanual_23.html  goomanual_24.html  goomanual_25.html  goomanual_26.html  goomanual_27.html  goomanual_28.html  goomanual_29.html  goomanual_3.html  goomanual_30.html  goomanual_31.html  goomanual_32.html  goomanual_33.html  goomanual_34.html  goomanual_35.html  goomanual_36.html  goomanual_37.html  goomanual_38.html  goomanual_39.html  goomanual_4.html  goomanual_40.html  goomanual_41.html  goomanual_42.html  (+76 more)
emacs/: Makefile.in  goo-font-lock.el  goo-shell.el  goo.el
emulator/: ascii.dylan  ast-eval.dylan  ast-linearize.dylan  ast-print.dylan  ast.dylan  boot.dylan  definitions.dylan  do-boot.dylan  environment.dylan  eval.dylan  functions.dylan  gen-cache.dylan  library.dylan  objects.dylan  p2c.dylan  primitives.dylan  proto.hdp  proto.lid  read.dylan  runtime.dylan  syntax.dylan  tests.dylan  top.dylan  write.dylan
proposals/: DEFINITIONS.TXT  DYNAMIC-OVERLOADING.TXT  LITERALS.TXT  MODULES.TXT  PARAMTYPES.TXT  SIMPLE-MODULES.TXT  TEMPLATE.TXT
src/: Makefile  Makefile.in  README.TXT  ascii.proto  ast-eval.proto.with-env  ast-linearize-extras.proto  environment.proto  environment.proto.new  exception-scraps.proto  goo.goo  io.proto  runtime-dylan.proto  runtime-emulator-epilogue.proto  runtime-emulator-prologue.proto  runtime-native.proto  system-patches.goo  tables.proto  tests.goo  tst-conditions.proto  user-patches.goo
txt/: assign2.txt  boot.txt  bugs.txt  changes.txt  differences.txt  ideas.txt  notes.txt  plan.txt  proto2goo.txt  python.txt  questions.txt  release.txt  renames.txt  renamings.txt  scheme.txt  speed.txt  todo.old.txt  todo.txt  translation.txt
(+276 files in other folders)
