# Process this file with autoconf to produce a configure script.
AC_INIT([src/goo], [.3])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
GOO_CHECK_EXE_SUFFIX

# Checks for libraries.
GOO_CHECK_GC_LIB

AC_SEARCH_LIBS(log, m, , AC_MSG_ERROR([Unable to find math library]))
AC_SEARCH_LIBS(dlopen, dl, AC_DEFINE(HAVE_DLOPEN, 1), AC_DEFINE(HAVE_DLOPEN, 0))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h fcntl.h memory.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([ftruncate memset mkdir munmap pow putenv select setenv sqrt strerror])

AC_OUTPUT(Makefile c/Makefile src/Makefile doc/Makefile emacs/Makefile)
